--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,12 @@
 html,
 body {
   margin: 0;
-  padding: 50px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
   text-align: center;
-  // background: #ccc;
 }
 
 #open-modal,
 #close-modal {
-  background-color: royalblue;
+  background-color: #4169e1;
   color: #fff;
-  padding: 15px 25px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-#modal {
-  background: #fff;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  height: 200px;
-  position: relative;
-  top: 25%;
-}
-
-#overlay {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.3);
 }
