--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,29 @@ body {
 #close-modal {
   background-color: #4169e1;
   color: #fff;
+  padding: 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+#modal {
+  background-color: #fff;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  height: 200px;
+  position: relative;
+  top: 30%;
+}
+
+#overlay {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3);
 }
